# tennis-news

./: .env.example  .gitignore  AGENT.MD  PRD.md  README.md  pyproject.toml
app/: __init__.py  logging.py  main.py
app/crawler/: __init__.py  schemas.py  service.py
app/crawler/adapters/: __init__.py  wta.py
app/crawler/clients/: __init__.py  base.py  wta.py
app/models/: __init__.py  base.py  entities.py
app/publisher/: __init__.py  renderer.py  service.py  wechat_client.py
app/publisher/templates/: result_article.html.j2  schedule_article.html.j2
app/services/: __init__.py  diff_service.py  dispatch_service.py  scheduler_service.py  sync_service.py
app/settings/: config.py
app/storage/: __init__.py  database.py  repositories.py
scripts/: init_db.py  render_schedule_pages.py
tests/: test_crawler_service.py  test_diff_service.py  test_diff_service_match_dates.py  test_dispatch_service.py  test_publisher_service.py  test_renderer.py  test_repositories.py  test_scheduler_service.py  test_settings.py  test_sync_service.py  test_wechat_client.py  test_wta_adapter.py  test_wta_client.py
