[project]
name = "tennis-news"
version = "0.1.0"
description = "Automated tennis tournament sync and WeChat publishing system"
readme = "PRD.md"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10,<4.0",
  "httpx>=0.27,<0.29",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<0.24",
  "ruff>=0.5,<0.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
